# hdbw.ai-methods.capstone

./: .gitignore  IDS-via-convolutional-neural-network(withoutDroppingExtraCols).ipynb  IDS-via-convolutional-neural-network.ipynb  SVM-scala.ipynb  build.sbt  intrusion-detection-system-using-neural-networks.ipynb  pyproject.toml
