[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "beber89", email = "mahmoudbaibars@gmail.com" }
]
dependencies = [
    "pandas>=2.3.0",
    "numpy==2.0.2",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.19.0",
    "keras>=3.10.0",
    "pydot>=4.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project"]
